css/style.css
@charset "UTF-8";
@font-face {
  font-family: "HelveticaNeueCyr";
  font-display: swap;
  src: url("../fonts/HelveticaNeueCyr-Bold.woff2") format("woff2"), url("../fonts/HelveticaNeueCyr-Bold.woff") format("woff");
  font-weight: 700;
  font-style: normal;
}
@font-face {
  font-family: "HelveticaNeueCyr";
  font-display: swap;
  src: url("../fonts/HelveticaNeueCyr-Roman.woff2") format("woff2"), url("../fonts/HelveticaNeueCyr-Roman.woff") format("woff");
  font-weight: 400;
  font-style: normal;
}
@font-face {
  font-family: "HelveticaNeueCyr";
  font-display: swap;
  src: url("../fonts/HelveticaNeueCyr-Black.woff2") format("woff2"), url("../fonts/HelveticaNeueCyr-Black.woff") format("woff");
  font-weight: 900;
  font-style: normal;
}
* {
  padding: 0px;
  margin: 0px;
  border: 0px;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  min-width: 320px;
}

body {
  color: #85878c;
  line-height: 1;
  font-family: "HelveticaNeueCyr";
  font-size: 1rem;
  -ms-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input,
button,
textarea {
  font-family: "HelveticaNeueCyr";
  font-size: inherit;
}

button {
  cursor: pointer;
  color: inherit;
  background-color: inherit;
}

a {
  color: inherit;
}

a:link,
a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

ul li {
  list-style: none;
}

img {
  vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: inherit;
  font-size: inherit;
}

body {
  background-color: #1a1a1a;
}
.lock body {
  overflow: hidden;
  touch-action: none;
}
.wrapper {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}
.wrapper > main {
  flex: 1 1 auto;
}
.wrapper > * {
  min-width: 0;
}

/*
(i) Стили будут применяться ко 
всем классам содержащим *__container
Например header__container, main__container и т.д.
Снипет (HTML): cnt
*/
[class*=__container] {
  max-width: 69.375rem;
  box-sizing: content-box;
  margin: 0 auto;
  padding: 0 0.9375rem;
}

.button {
  display: inline-flex;
  border-radius: 43px;
  color: #1a1a1a;
  text-align: center;
  font-weight: 700;
  letter-spacing: 0.2em;
  background-color: #34c759;
  transition: background-color 0.3s ease 0s;
}
@media (min-width: 71.25em) {
  .button {
    padding-top: 1.5625rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .button {
    padding-top: clamp( 1.25rem , 1.1280487805rem  +  0.6097560976vw , 1.5625rem );
  }
}
@media (max-width: 20em) {
  .button {
    padding-top: 1.25rem;
  }
}
@media (min-width: 71.25em) {
  .button {
    padding-bottom: 1.5625rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .button {
    padding-bottom: clamp( 1.25rem , 1.1280487805rem  +  0.6097560976vw , 1.5625rem );
  }
}
@media (max-width: 20em) {
  .button {
    padding-bottom: 1.25rem;
  }
}
@media (min-width: 71.25em) {
  .button {
    padding-left: 3.5625rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .button {
    padding-left: clamp( 1.875rem , 1.2164634146rem  +  3.2926829268vw , 3.5625rem );
  }
}
@media (max-width: 20em) {
  .button {
    padding-left: 1.875rem;
  }
}
@media (min-width: 71.25em) {
  .button {
    padding-right: 3.5625rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .button {
    padding-right: clamp( 1.875rem , 1.2164634146rem  +  3.2926829268vw , 3.5625rem );
  }
}
@media (max-width: 20em) {
  .button {
    padding-right: 1.875rem;
  }
}
@media (min-width: 71.25em) {
  .button {
    font-size: 1.125rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .button {
    font-size: clamp( 1rem , 0.9512195122rem  +  0.243902439vw , 1.125rem );
  }
}
@media (max-width: 20em) {
  .button {
    font-size: 1rem;
  }
}
@media (any-hover: hover) {
  .button:hover {
    background-color: #1fdc4e;
  }
}

[class*=-ibg] {
  position: relative;
}
[class*=-ibg] img {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  object-fit: cover;
}

[class*=-ibg_contain] img {
  object-fit: contain;
}

.header {
  position: fixed;
  width: 100%;
  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
  transition: background-color 0.3s ease 0s;
}
@media (min-width: 71.25em) {
  .header {
    height: 5.6875rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .header {
    height: clamp( 3.125rem , 2.125rem  +  5vw , 5.6875rem );
  }
}
@media (max-width: 20em) {
  .header {
    height: 3.125rem;
  }
}
.header._header-scroll {
  background-color: #1a1a1a;
}
.header__container {
  height: 100%;
}
.header__items {
  display: flex;
  justify-content: space-between;
  height: 100%;
  align-items: center;
}
.header__logo {
  display: flex;
  column-gap: 0.625rem;
  z-index: 5;
}
.header__title {
  align-self: flex-end;
  color: #34c759;
  stroke: #000;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  letter-spacing: 0.09375em;
}
.menu {
  display: grid;
  align-items: center;
}
@media (max-width: 47.99875em) {
  .menu__body {
    position: fixed;
    overflow: auto;
    position: fixed;
    overflow: auto;
    width: 100%;
    height: 100%;
    top: 0;
    right: -100%;
    transition: right 0.3s ease 0s;
    background-color: #141414;
  }
}
@media (max-width: 47.99875em) and (min-width: 71.25em) {
  .menu__body {
    padding-top: 7.1875rem;
  }
}
@media (max-width: 47.99875em) and (min-width: 20em) and (max-width: 71.25em) {
  .menu__body {
    padding-top: clamp( 4.375rem , 3.2774390244rem  +  5.487804878vw , 7.1875rem );
  }
}
@media (max-width: 47.99875em) and (max-width: 20em) {
  .menu__body {
    padding-top: 4.375rem;
  }
}
@media (max-width: 47.99875em) {
  .menu__body::before {
    content: "";
    top: -100%;
    position: fixed;
    width: 100%;
    left: 0;
    transition: top 0.4s ease 0s;
    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
  }
}
@media (max-width: 47.99875em) and (min-width: 71.25em) {
  .menu__body::before {
    height: 5.6875rem;
  }
}
@media (max-width: 47.99875em) and (min-width: 20em) and (max-width: 71.25em) {
  .menu__body::before {
    height: clamp( 3.125rem , 2.125rem  +  5vw , 5.6875rem );
  }
}
@media (max-width: 47.99875em) and (max-width: 20em) {
  .menu__body::before {
    height: 3.125rem;
  }
}
@media (max-width: 47.99875em) {
  .menu-open .menu__body {
    right: 0;
  }
  .menu-open .menu__body::before {
    top: 0;
  }
}
.menu__list {
  display: flex;
  gap: 2.8125rem;
}
@media (max-width: 47.99875em) {
  .menu__list {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}
.menu__link {
  font-size: 0.875rem;
  font-weight: 700;
  color: #fff;
  transition: color 0.3s ease 0s;
}
@media (max-width: 47.99875em) {
  .menu__link {
    font-size: 2.1875rem;
  }
}
@media (any-hover: hover) {
  .menu__link:hover {
    color: #34c759;
  }
}

.icon-menu {
  display: none;
}
@media (max-width: 47.99875em) {
  .icon-menu {
    display: block;
    position: relative;
    width: 30px;
    height: 18px;
    cursor: pointer;
    z-index: 5;
  }
  .icon-menu span, .icon-menu::before, .icon-menu::after {
    content: "";
    transition: all 0.3s ease 0s;
    left: 0px;
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: #fff;
  }
  .icon-menu::before {
    top: 0px;
  }
  .icon-menu::after {
    bottom: 0px;
  }
  .icon-menu span {
    top: calc(50% - 1px);
  }
  .menu-open .icon-menu span {
    transform: scale(0);
  }
  .menu-open .icon-menu::before {
    transform: rotate(-45deg);
    top: calc(50% - 1px);
  }
  .menu-open .icon-menu::after {
    transform: rotate(45deg);
    bottom: calc(50% - 1px);
  }
}

.favourite {
  background: url("../img/bg.jpg") 0 -0.4375rem/cover no-repeat;
}
@media (min-width: 71.25em) {
  .favourite {
    padding-top: 10.6875rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .favourite {
    padding-top: clamp( 5rem , 2.7804878049rem  +  11.0975609756vw , 10.6875rem );
  }
}
@media (max-width: 20em) {
  .favourite {
    padding-top: 5rem;
  }
}
@media (min-width: 71.25em) {
  .favourite {
    padding-bottom: 25.0625rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .favourite {
    padding-bottom: clamp( 4.375rem , -3.6981707317rem  +  40.3658536585vw , 25.0625rem );
  }
}
@media (max-width: 20em) {
  .favourite {
    padding-bottom: 4.375rem;
  }
}
.favourite__container {
  display: grid;
  justify-items: center;
}
.favourite__header {
  color: #fff;
  text-align: center;
  letter-spacing: 0.1em;
  text-transform: capitalize;
}
@media (min-width: 71.25em) {
  .favourite__header {
    font-size: 4.5rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .favourite__header {
    font-size: clamp( 2.5rem , 1.7195121951rem  +  3.9024390244vw , 4.5rem );
  }
}
@media (max-width: 20em) {
  .favourite__header {
    font-size: 2.5rem;
  }
}
.favourite__header span {
  font-weight: 900;
}
.favourite__header:not(:last-child) {
  margin-bottom: 1rem;
}
.favourite__text {
  color: #fff;
  text-align: center;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  line-height: 165%;
  letter-spacing: -0.0125em;
  max-width: 37.1875rem;
}
@media (min-width: 71.25em) {
  .favourite__text:not(:last-child) {
    margin-bottom: 2.5rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .favourite__text:not(:last-child) {
    margin-bottom: clamp( 1.25rem , 0.762195122rem  +  2.4390243902vw , 2.5rem );
  }
}
@media (max-width: 20em) {
  .favourite__text:not(:last-child) {
    margin-bottom: 1.25rem;
  }
}
@media (min-width: 71.25em) {
  .favourite__button:not(:last-child) {
    margin-bottom: 4.375rem;
  }
}
@media (min-width: 20em) and (max-width: 71.25em) {
  .favourite__button:not(:last-child) {
    margin-bottom: clamp( 2.5rem , 1.7682926829rem  +  3.6585365854vw , 4.375rem );
  }
}
@media (max-width: 20em) {
  .favourite__button:not(:last-child) {
    margin-bottom: 2.5rem;
  }
}
.body-info-favourite {
  display: grid;
  row-gap: 1.875rem;
}
@media (min-width: 69.375em) {
  .body-info-favourite {
    column-gap: 5.625rem;
  }
}
@media (min-width: 37.5em) and (max-width: 69.375em) {
  .body-info-favourite {
    column-gap: clamp( 0.9375rem , -4.5772058824rem  +  14.7058823529vw , 5.625rem );
  }
}
@media (max-width: 37.5em) {
  .body-info-favourite {
    column-gap: 0.9375rem;
  }
}
@media (min-width: 40.25em) {
  .body-info-favourite {
    grid-template-columns: repeat(3, 1fr);
  }
}
.body-info-favourite__item {
  display: grid;
  justify-items: center;
}
.body-info-favourite__icon:not(:last-child) {
  margin-bottom: 1rem;
}
.body-info-favourite__sub-title {
  line-height: 187.5%;
  color: #fff;
}

